--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SERVICE_ADDRESS=0.0.0.0:8000
-DATABASE_URL=mysql://root:password@127.0.0.1:3306/store
+DATABASE_URL=mysql://root:root@localhost:3306/database
 RUST_LOG=info
 ENV=development
