--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ sea-orm = { version = "0.7.1", features = [
 serde = { version = "1.0.136", features = ["derive"] }
 tokio = { version = "1.17.0", features = ["full"] }
 entity = { path = "entity" }
+migration = { path = "migration" }
 
 # On Windows
 # ```
