--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sea-orm = { version = "0.7.1", features = ["sqlx-mysql", "runtime-actix-rustls", "macros"] }
+sea-orm = { version = "^0", features = [
+  "sqlx-mysql",
+  "runtime-actix-rustls",
+  "macros",
+], default-features = false }
