--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = [".", "entity"]
+members = [".", "migration"]
 
 [dependencies]
 actix-rt = "2.7.0"
@@ -21,11 +21,13 @@ sea-orm = { version = "0.7.1", features = [
   "sqlx-mysql",
   "runtime-actix-rustls",
   "macros",
+  "with-chrono",
 ] }
 serde = { version = "1.0.136", features = ["derive"] }
 tokio = { version = "1.17.0", features = ["full"] }
-entity = { path = "entity" }
+# entity = { path = "entity" }
 migration = { path = "migration" }
+chrono = { version = "0.4.19", features = ["serde"] }
 
 # On Windows
 # ```
