--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace]
-members = [".", "entity", "migration"]
+# members = [".", "entity", "migration"]
+members = [".", "migration"]
 
 [dependencies]
 actix-rt = "2.7.0"
@@ -24,7 +25,7 @@ sea-orm = { version = "0.7.1", features = [
 ] }
 serde = { version = "1.0.136", features = ["derive"] }
 tokio = { version = "1.17.0", features = ["full"] }
-entity = { path = "entity" }
+# entity = { path = "entity" }
 migration = { path = "migration" }
 
 # On Windows
