--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 tokio = { version = "1.17.0", features = ["full"] }
 # entity = { path = "entity" }
 migration = { path = "migration" }
+chrono = "0.4.19"
 
 # On Windows
 # ```
