--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1.17.0", features = ["full"] }
 # entity = { path = "entity" }
 migration = { path = "migration" }
 chrono = "0.4.19"
+env_logger = "0.9.0"
 
 # On Windows
 # ```
