--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,14 @@ sea-orm = { version = "0.7.1", features = [
   "runtime-actix-rustls",
   "macros",
 ] }
-serde = { version = "1.0.136", features = ["derive"] }
-tokio = { version = "1.17.0", features = ["full"] }
+serde = { version = "1.0.137", features = ["derive"] }
+tokio = { version = "1.18.0", features = ["full"] }
 # entity = { path = "entity" }
 migration = { path = "migration" }
 chrono = "0.4.19"
 env_logger = "0.9.0"
+derive_builder = "0.11.2"
+validator = { version = "0.14.0", features = ["derive"] }
 
 # On Windows
 # ```
